# django-app-with-api-for-products

./: .bandit  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cancel-workflow-runs.yml  pr-checks-and-tests.yml
djproducts/: asgi.py  urls.py  wsgi.py
djproducts/api/: exceptions.py  mixins.py  urls.py
djproducts/api/auth/: urls.py  views.py
djproducts/api/core/serializers/: __init__.py  base.py
djproducts/api/orders/: serializers.py  urls.py  views.py
djproducts/api/products/: serializers.py  urls.py  views.py
djproducts/api/users/: serializers.py  utils.py  views.py
djproducts/api/utils/: codes.py  exception_handlers.py  exceptions.py  renderers.py  swagger.py
djproducts/apps/auth/: __init__.py  apps.py  services.py
djproducts/apps/core/: __init__.py  apps.py  json.py
djproducts/apps/core/models/: base.py
djproducts/apps/orders/: __init__.py  apps.py
djproducts/apps/orders/migrations/: 0001_initial.py
djproducts/apps/orders/models/: __init__.py  order.py
djproducts/apps/orders/services/: order.py
djproducts/apps/products/: __init__.py  apps.py  exceptions.py
djproducts/apps/products/migrations/: 0001_initial.py
djproducts/apps/products/models/: product.py
djproducts/apps/products/queries/: product.py
djproducts/apps/users/: __init__.py  admin.py  apps.py
djproducts/fixtures/: products.json  users.json
djproducts/settings/: _api.py  _jwt.py  _shared.py  common.py  local.py  production.py  sqlite.py  test.py
(+4 files in other folders)
